<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoolBridGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_name">菜鸟游戏</string>
    <string name="recommend">推荐</string>
    <string name="ranked">排行</string>
    <string name="category">分类</string>
    <string name="specialsubject">专题</string>
    <string name="community">社区</string>
    <string name="personal_center">个人中心</string>
    <string name="message_center">消息中心</string>
    <string name="integral_exchange">积分兑换</string>
    <string name="photo_share">照片分享</string>
    <string name="manager">管理</string>
    <string name="sign_bt">签到</string>
   <string name="sign_in">签到中心</string> 

</resources>
