<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/titlebackground" >

        <ImageView
            android:id="@+id/image_view_set"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/smalltitle"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/recommend"
                style="@style/main_rb"
                android:text="@string/recommend" />

            <TextView
                android:id="@+id/recommend_right"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/ranked"
                style="@style/main_rb"
                android:text="@string/ranked" />

            <TextView
                android:id="@+id/ranked_right"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/category"
                style="@style/main_rb"
                android:text="@string/category" />

            <TextView
                android:id="@+id/category_right"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/specialsubject"
                style="@style/main_rb"
                android:text="@string/specialsubject" />

            <TextView
                android:id="@+id/specialsubjiect_right"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/community"
                style="@style/main_rb"
                android:text="@string/community" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/divider_line"
        android:gravity="center_vertical" >

        <View
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scorll_ind" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:layout_marginTop="2dp"
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </android.support.v4.view.ViewPager>
    
</LinearLayout>